--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -8,6 +8,9 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
+    display: -webkit-flex; /* Safari */
+    -webkit-align-items: flex-end; /* Safari 7.0+ */
+    -webkit-justify-content: flex-end; /* Safari */
 }
 .inputs {
     margin-right: 10px;
