all post equal functions is working. fixed issue with resetting inputs when new number is typed after equal. added clear button (still not fully functional). all clear button is fully functional.

--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -6,5 +6,12 @@
     width: 100%;
 }
 #buttonAC {
-    width: 100%;
+    width: 115%;
+}
+#buttonClear {
+    width: 115%;
+}
+.buttons:hover {
+    background-color: yellow !important;
+    color: black !important;
 }
